improved code logic

--- a/app/src/main/res/layout/activity_booking_confirmed.xml
+++ b/app/src/main/res/layout/activity_booking_confirmed.xml
@@ -708,7 +708,8 @@
                         android:id="@+id/txtRulesnPoliciesExpand"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingRight="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:paddingHorizontal="10dp"
                         android:text=""
                         android:textColor="@color/black"
                         android:textSize="16sp"
