--- a/app/src/main/res/layout/activity_my_bookings.xml
+++ b/app/src/main/res/layout/activity_my_bookings.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/custom_grey"
     android:orientation="vertical"
     tools:context=".MyBookingsActivity">
 
