--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -4,6 +4,7 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/custom_grey"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     tools:context=".EditProfileActivity"
@@ -58,6 +59,8 @@
             android:layout_marginTop="320dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/edit"
+            android:defaultFocusHighlightEnabled="true"
+            android:focusedByDefault="true"
             android:inputType="text"
             android:paddingStart="15dp"
             android:paddingTop="5dp"
@@ -65,8 +68,6 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:focusedByDefault="true"
-            android:defaultFocusHighlightEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/profileCardView"
