--- a/app/src/main/res/layout/fragment_full_profile.xml
+++ b/app/src/main/res/layout/fragment_full_profile.xml
@@ -106,7 +106,7 @@
         <TextView
             android:id="@+id/pMail"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="20dp"
