--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,8 +54,9 @@
                 android:layout_height="40dp"
                 android:scaleType="fitXY"
                 android:layout_marginTop="65dp"
+                android:layout_marginLeft="@dimen/_5sdp"
                 android:adjustViewBounds="true"
-                android:layout_marginStart="300dp"
+                android:layout_marginStart="@dimen/_260sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -63,11 +64,11 @@
                 app:srcCompat="@drawable/favpng_arrow_icon_design_symbol" />
 
             <LinearLayout
-                android:layout_width="230dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical"
-                android:layout_marginStart="40dp">
+                android:layout_marginStart="@dimen/_10sdp">
 
                 <TextView
                     android:id="@+id/userName"
