--- a/app/src/main/res/layout/single_mybookings.xml
+++ b/app/src/main/res/layout/single_mybookings.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="145dp"
+    android:layout_height="150dp"
 
     android:layout_margin="5dp"
     android:layout_marginBottom="10dp"
@@ -14,7 +14,7 @@
         android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray_scale"
+        android:background="@color/white"
         app:cardCornerRadius="17dp"
         app:cardElevation="10dp">
 
