--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FF4C29</color>
     <color name="custom_grey">#F5605D5C</color>
+
+    <color name="pinkred">#DACC033C</color>
+    <color name="rectangle_1_color">#D9D9D9</color>
+
 </resources>
