--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,7 +20,7 @@
     <!-- Primary brand color. -->
 
 
-    <item name="colorPrimary">@color/purple_500</item>
+    <item name="colorPrimary">@color/orange</item>
 
     <item name="colorPrimaryVariant">@color/purple_700</item>
 
